--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,14 @@ repos:
         args: ["--no-config", "--print-width", "100"]
   - repo: local
     hooks:
+      - id: ruff
+        name: ruff
+        entry: ruff
+        args: ["--fix", "--exit-non-zero-on-fix"]
+        language: system
+        types_or: [python]
+        stages: [commit]
+
       - id: black
         name: black
         entry: black
@@ -28,13 +36,6 @@ repos:
         language: system
         types: [python]
         args: ["--rcfile=pylintrc"]
-        stages: [commit]
-
-      - id: ruff
-        name: ruff
-        entry: ruff
-        language: system
-        types: [python]
         stages: [commit]
 
       - id: disallow-rule-ids
