--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ extend-exclude = [
 
 [tool.ruff.per-file-ignores]
 "dev/*" = ["T201", "PT018"]
-"examples/*" = ["T"]
+"examples/*" = ["T20"]
 "mlflow/*" = ["PT018"]
 
 [tool.ruff.flake8-pytest-style]
