--- a/dev/Dockerfile.test
+++ b/dev/Dockerfile.test
@@ -6,33 +6,22 @@ ENV DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /app
 
+ADD . /app
+
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends build-essential openjdk-17-jre-headless \
+    apt-get install -y --no-install-recommends build-essential openjdk-11-jre-headless \
     # cmake and protobuf-compiler required for onnx install
     cmake protobuf-compiler && \
     # Install miniforge
     wget -q https://github.com/conda-forge/miniforge/releases/latest/download/$MINIFORG_FILENAME && \
     bash $MINIFORG_FILENAME -b -p /opt/conda && \
-    rm $MINIFORG_FILENAME
-
-ADD ./requirements /app/requirements
-
-RUN \
+    rm $MINIFORG_FILENAME && \
     # install required python packages
-    pip install -r requirements/test-requirements.txt --no-cache-dir \
-        -r requirements/lint-requirements.txt psutil
-
-ADD . /app
-
-RUN \
+    pip install --no-cache-dir -r requirements/test-requirements.txt --no-cache-dir -r requirements/lint-requirements.txt && \
     # install mlflow in editable form
-    pip install --no-cache-dir -e .
-
-RUN \
+    pip install --no-cache-dir -e . && \
     # clean cache
-    apt-get autoremove -yqq --purge && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-RUN \
+    apt-get autoremove -yqq --purge && apt-get clean && rm -rf /var/lib/apt/lists/* && \
     # adding an unprivileged user
     groupadd --gid 10001 mlflow && \
     useradd --uid 10001 --gid mlflow --shell /bin/bash --create-home mlflow
