--- a/tests/server/auth/fixtures/jwt_auth.ini
+++ b/tests/server/auth/fixtures/jwt_auth.ini
@@ -3,4 +3,4 @@ default_permission = READ
 database_uri = sqlite:///basic_auth.db
 admin_username = admin
 admin_password = password
-authorization_function = examples.jwt_auth:authenticate_request
+authorization_function = jwt_auth:authenticate_request
