--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,14 +11,18 @@ repos:
         name: ruff
         entry: python dev/ruff.py
         language: system
-        types_or: [python]
+        types_or: [
+            python,
+            # TODO: Uncomment this once https://github.com/astral-sh/ruff/issues/6834 is fixed
+            # jupyter,
+          ]
         stages: [commit]
 
       - id: black
         name: black
         entry: black
         language: system
-        types: [python]
+        types_or: [python, jupyter]
         stages: [commit]
         log_file: .black.log
 
