--- a/requirements/core-requirements.yaml
+++ b/requirements/core-requirements.yaml
@@ -81,3 +81,7 @@ Jinja2-windows:
 matplotlib:
   pip_release: matplotlib
   max_major_version: 3
+
+psutil:
+  pip_release: psutil
+  max_major_version: 5
