Add dev/black.py to transform error messages
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,11 +20,10 @@ repos:
 
       - id: black
         name: black
-        entry: black
+        entry: python dev/black.py
         language: system
         types_or: [python, jupyter]
         stages: [commit]
-        log_file: .black.log
 
       - id: blacken-docs
         name: blacken-docs
