Run ruff on notebooks
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,7 @@ repos:
         name: ruff
         entry: python dev/ruff.py
         language: system
-        types_or: [
-            python,
-            # TODO: Uncomment this once https://github.com/astral-sh/ruff/issues/6834 is fixed
-            # jupyter,
-          ]
+        types_or: [python, jupyter]
         stages: [commit]
 
       - id: black
