--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -87,7 +87,8 @@ tensorflow:
     requirements:
       # Requirements to run tests for keras
       ">= 0.0.0": ["scikit-learn", "pyspark", "pyarrow", "transformers"]
-      "< 2.6.0": ["protobuf<4.0.0"]
+      "<= 2.6.0": ["protobuf<4.0.0"]
+      "== 2.6.0": ["keras==2.6.0"]
       "< 2.7.0": ["pandas==1.3.5"]
       ">= 2.7.0": ["pandas<2.0"]
       # TensorFlow 2.3.4, 2.4.4, 2.5.3, and 2.6.5 are incompatible with SQLAlchemy 2.x due to
@@ -110,7 +111,8 @@ tensorflow:
     maximum: "2.13.0"
     requirements:
       "== dev": ["scikit-learn"]
-      "< 2.6.0": ["protobuf<4.0.0"]
+      "<= 2.6.0": ["protobuf<4.0.0"]
+      "== 2.6.0": ["keras==2.6.0"]
       "< 2.7.0": ["pandas==1.3.5"]
       # TensorFlow 2.3.4, 2.4.4, 2.5.3, and 2.6.5 are incompatible with SQLAlchemy 2.x due to
       # transitive dependency version conflicts with the `typing-extensions` package
