--no-directory-urls
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           command: |
             # make rsthtml
             # make javadocs
-            mkdocs build
+            mkdocs build --no-directory-urls
       # - run:
       #     name: Test examples
       #     working_directory: docs
