--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -82,18 +82,17 @@ tensorflow:
       pip install tf-nightly
 
   models:
-    minimum: "2.6.0"
+    minimum: "2.6.5"
     maximum: "2.13.0"
     requirements:
       # Requirements to run tests for keras
       ">= 0.0.0": ["scikit-learn", "pyspark", "pyarrow", "transformers"]
-      "== 2.6.0": ["keras==2.6.0", "tensorflow-estimator==2.6.0", "protobuf<4.0.0"]
       "< 2.7.0": ["pandas==1.3.5"]
       ">= 2.7.0": ["pandas<2.0"]
-      # TensorFlow <= 2.6.5 are incompatible with SQLAlchemy 2.x due to
+      # TensorFlow == 2.6.5 are incompatible with SQLAlchemy 2.x due to
       # transitive dependency version conflicts with the `typing-extensions` package
       # They are also incompatible with alembic 1.10.1 with the TypeGuard dependency in py3.8
-      "<= 2.6.5": ["sqlalchemy<2", "alembic<1.10"]
+      "== 2.6.5": ["sqlalchemy<2", "alembic<1.10"]
     run: |
       pytest \
         tests/tensorflow/test_load_saved_tensorflow_estimator.py \
@@ -103,16 +102,15 @@ tensorflow:
         tests/tensorflow/test_keras_pyfunc_model_works_with_all_input_types.py
 
   autologging:
-    minimum: "2.6.0"
+    minimum: "2.6.5"
     maximum: "2.13.0"
     requirements:
       "== dev": ["scikit-learn"]
-      "== 2.6.0": ["keras==2.6.0", "protobuf<4.0.0"]
       "< 2.7.0": ["pandas==1.3.5"]
-      # TensorFlow <= 2.6.5 are incompatible with SQLAlchemy 2.x due to
+      # TensorFlow == 2.6.5 are incompatible with SQLAlchemy 2.x due to
       # transitive dependency version conflicts with the `typing-extensions` package
       # They are also incompatible with alembic 1.10.1 with the TypeGuard dependency in py3.8
-      "<= 2.6.5": ["sqlalchemy<2", "alembic<1.10"]
+      "== 2.6.5": ["sqlalchemy<2", "alembic<1.10"]
     run: |
       pytest tests/tensorflow/test_tensorflow2_autolog.py
 
