--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -338,6 +338,8 @@ jobs:
           pip install datasets
           # Install TensorFlow to test TensorFlow dataset usage with MLflow dataset tracking
           pip install tensorflow
+          # Install torch and transformers to test metrics
+          pip install torch transformers
       - uses: ./.github/actions/pipdeptree
       - name: Download Hadoop winutils for Spark
         run: |
