add pandoc for docs build
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,10 @@ jobs:
             sudo apt-get install maven --yes
             java -version
       - run:
+          name: Install Pandoc
+          command: |
+            sudo apt-get install pandoc
+      - run:
           name: Install Python dependencies
           command: |
             pip --version
