--- a/.github/workflows/rerun.yml
+++ b/.github/workflows/rerun.yml
@@ -14,7 +14,7 @@ jobs:
   set-matrix:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.repository == 'mlflow/mlflow'
+    if: github.repository == 'mlflow-automation/mlflow'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/github-script@v6
