--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -149,6 +149,14 @@ jobs:
             else
               java_version=8
             fi
+          elif [ "${{ matrix.package }}" = "pyspark" ]; then
+            pip install packaging
+            use_java17=$(python -c "from packaging.version import parse; print('${{ matrix.version }}' == 'dev' or parse('${{ matrix.version }}') > parse('3.4.1'))")
+            if [ "$use_java17" = "True" ]; then
+              java_version=17
+            else
+              java_version=11
+            fi
           else
             java_version=11
           fi
