--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -102,6 +102,8 @@ jobs:
           python -m venv ~/.venv
           . ~/.venv/bin/activate
           source ./dev/install-common-deps.sh --ml
+          # pyspark 3.5 is incompatible with delta 2.4
+          pip install 'pyspark<3.5'
       - uses: ./.github/actions/pipdeptree
       - name: Import check
         run: |
@@ -336,7 +338,8 @@ jobs:
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
           pip install -e .[extras]
-          pip install pyspark
+          # pyspark 3.5 is incompatible with delta 2.4
+          pip install 'pyspark<3.5'
           pip install mleap
           # Install Hugging Face datasets to test Hugging Face usage with MLflow dataset tracking
           pip install datasets
