--- a/tests/db/compose.yml
+++ b/tests/db/compose.yml
@@ -80,7 +80,7 @@ services:
       context: .
       dockerfile: Dockerfile.mssql
     environment:
-      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+17+for+SQL+Server
+      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+17+for+SQL+Server&LongAsMax=Yes
       INSTALL_MLFLOW_FROM_REPO: true
 
   migration-mssql:
