Unpin numpy for evaluate job
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -273,7 +273,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-          pip install pyspark "numpy<1.24.0" torch transformers
+          pip install pyspark torch transformers
       - uses: ./.github/actions/pipdeptree
       - name: Run tests
         run: |
