only install ODBC Driver18 for migration db
Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

--- a/tests/db/Dockerfile.mssql18
+++ b/tests/db/Dockerfile.mssql18
@@ -12,7 +12,7 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
 RUN curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
 
 # install SQL Server drivers and tools
-RUN apt-get update && ACCEPT_EULA=Y apt-get install -y msodbcsql mssql-tools unixodbc-dev
+RUN apt-get update && ACCEPT_EULA=Y apt-get install -y msodbcsql18 mssql-tools18 unixodbc-dev
 
 RUN pip install pyodbc pytest pytest-cov
 RUN echo "${DEPENDENCIES}" > /tmp/requriements.txt && pip install -r /tmp/requriements.txt
