--- a/tests/db/compose.yml
+++ b/tests/db/compose.yml
@@ -80,7 +80,7 @@ services:
       context: .
       dockerfile: Dockerfile.mssql
     environment:
-      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+17+for+SQL+Server
+      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+18+for+SQL+Server
       INSTALL_MLFLOW_FROM_REPO: true
 
   migration-mssql:
@@ -91,12 +91,11 @@ services:
     image: mlflow-mssql
     build:
       context: .
-      dockerfile: Dockerfile.mssql18
+      dockerfile: Dockerfile.mssql
     environment:
       # `LongAsMax=Yes` is to fix error in sqlalchemy<2.0:
       # [ODBC Driver 17 for SQL Server][SQL Server]The data types varchar and ntext are incompatible in the equal to operator
       # https://docs.sqlalchemy.org/en/20/dialects/mssql.html#avoiding-sending-large-string-parameters-as-text-ntext
-      INSTALL_ODBC_DRIVER_18: true
       MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+18+for+SQL+Server&LongAsMax=Yes
     command: tests/db/check_migration.sh
 
