--- a/tests/db/compose.yml
+++ b/tests/db/compose.yml
@@ -80,7 +80,7 @@ services:
       context: .
       dockerfile: Dockerfile.mssql
     environment:
-      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
+      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+17+for+SQL+Server
       INSTALL_MLFLOW_FROM_REPO: true
 
   migration-mssql:
@@ -93,10 +93,11 @@ services:
       context: .
       dockerfile: Dockerfile.mssql
     environment:
-      # `LongAsMax=Yes` is to fix error in sqlalchemy<2.0:
+      # We could try using ODBC Driver 18 and append `LongAsMax=Yes` to fix error for sqlalchemy<2.0:
       # [ODBC Driver 17 for SQL Server][SQL Server]The data types varchar and ntext are incompatible in the equal to operator
       # https://docs.sqlalchemy.org/en/20/dialects/mssql.html#avoiding-sending-large-string-parameters-as-text-ntext
-      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+18+for+SQL+Server&LongAsMax=Yes
+      MLFLOW_TRACKING_URI: mssql+pyodbc://mlflowuser:Mlfl*wpassword1@mssql/mlflowdb?driver=ODBC+Driver+17+for+SQL+Server
+      SKIP_MSSQL_LOG_PARAM_MAX_LENGTH_CHECK: true
     command: tests/db/check_migration.sh
 
   mlflow-sqlite:
