--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -311,7 +311,7 @@ spark:
       # -Pconnect -Phive is requried by spark connect
       ./build/mvn -Pconnect -Phive -DskipTests --no-transfer-progress clean package
       cd python
-      python setup.py install
+      pip install '.[connect]'
 
   models:
     minimum: "3.0.0"
@@ -323,7 +323,7 @@ spark:
     requirements:
       ">= 0.0.0": ["boto3", "scikit-learn", "pyarrow"]
       "<= 3.3.3": ["pandas<2"]
-      ">= 3.5.0": ["pyspark[connect]", "torch", "scikit-learn", "torcheval"]
+      ">= 3.5.0": ["torch", "scikit-learn", "torcheval"]
     run: |
       SAGEMAKER_OUT=$(mktemp)
       if mlflow sagemaker build-and-push-container --no-push --mlflow-home . > $SAGEMAKER_OUT 2>&1; then
