--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -312,7 +312,7 @@ spark:
       cd python
       python setup.py sdist
       sdist=$(find dist -type f -name "*.tar.gz")
-      pip install "pyspark[connect] @ $sdist"
+      pip install "pyspark[connect] @ file://$sdist"
 
   models:
     minimum: "3.0.0"
