--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -313,6 +313,8 @@ spark:
       python setup.py sdist
       sdist=$(find dist -type f -name "*.tar.gz")
       pip install "$sdist[connect]"
+      SPARK_JARS="$(pwd)connector/connect/server/target/**/spark-connect*SNAPSHOT.jar)"
+      echo "SPARK_JARS=$SPARK_JARS" >> $GITHUB_ENV
 
   models:
     minimum: "3.0.0"
@@ -327,15 +329,15 @@ spark:
       ">= 3.5.0": ["torch", "scikit-learn", "torcheval"]
       ">= 3.5.0, < dev": ["pyspark[connect]"]
     run: |
-      SAGEMAKER_OUT=$(mktemp)
-      if mlflow sagemaker build-and-push-container --no-push --mlflow-home . > $SAGEMAKER_OUT 2>&1; then
-        echo "Sagemaker container build succeeded.";
-      else
-        echo "Sagemaker container build failed, output:";
-        cat $SAGEMAKER_OUT;
-        exit 1
-      fi
-      pytest tests/spark --ignore tests/spark/autologging --ignore tests/spark/test_spark_connect_model_export.py
+      # SAGEMAKER_OUT=$(mktemp)
+      # if mlflow sagemaker build-and-push-container --no-push --mlflow-home . > $SAGEMAKER_OUT 2>&1; then
+      #   echo "Sagemaker container build succeeded.";
+      # else
+      #   echo "Sagemaker container build failed, output:";
+      #   cat $SAGEMAKER_OUT;
+      #   exit 1
+      # fi
+      # pytest tests/spark --ignore tests/spark/autologging --ignore tests/spark/test_spark_connect_model_export.py
 
       if [[ $(python -c "from packaging.version import Version;import pyspark;print(Version(pyspark.__version__) >= Version('3.5'))") = "True" ]]; then
         pytest tests/spark/test_spark_connect_model_export.py;
