Fix langchain dev tests
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -560,6 +560,7 @@ langchain:
           "psutil",
           "faiss-cpu",
           "langchain-experimental",
+          "numexpr",
         ]
     run: |
       pytest tests/langchain/test_langchain_model_export.py
