--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -301,7 +301,10 @@ jobs:
       - name: Run tests
         run: |
           export MLFLOW_HOME=$(pwd)
-          pytest --durations=30 tests/pyfunc
+          pytest --durations=30 tests/pyfunc --ignore tests/pyfunc/test_spark_connect.py
+
+          # test_spark_connect.py fails if it's run with ohter tests, so run it separately.
+          pytest tests/pyfunc/test_spark_connect.py
 
   sagemaker:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
