--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,8 @@ jobs:
             pip --version
             pip install --progress-bar off -r requirements/doc-requirements.txt pytest pytest-cov plotly .[gateway]
             pip install sphinx-copybutton sphinx-design nbsphinx git+https://github.com/pydata/pydata-sphinx-theme
+            wget https://github.com/jgm/pandoc/releases/download/3.1.8/pandoc-3.1.8-1-amd64.deb -O /tmp/pandoc-3.1.8-1-amd64.deb
+            sudo dpkg -i /tmp/pandoc-3.1.8-1-amd64.deb
       - run:
           name: Build documentation
           working_directory: docs
