Fix failed requirements test workflow
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -18,6 +18,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  MLFLOW_HOME: /home/runner/work/mlflow/mlflow
   MLFLOW_CONDA_HOME: /usr/share/miniconda
   SPARK_LOCAL_IP: localhost
   PYTHON_VERSION: "3.8"
