Enable other Go linters
Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,9 +6,9 @@ linters:
   disable:
     - depguard
   presets:
-    # - bugs
+    - bugs
     - comment
-    # - complexity
+    - complexity
     - error
     - format
     - import
@@ -16,8 +16,8 @@ linters:
     - module
     - performance
     - sql
-    # - style
-    # - test
+    - style
+    - test
     - unused
 
 linters-settings:
