Only fix all bugs lint problems
Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,7 +8,7 @@ linters:
   presets:
     - bugs
     - comment
-    - complexity
+    # - complexity
     - error
     - format
     - import
@@ -16,8 +16,8 @@ linters:
     - module
     - performance
     - sql
-    - style
-    - test
+    # - style
+    # - test
     - unused
 
 linters-settings:
