Apply style present linters
Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,6 +5,7 @@ linters:
     - lll
   disable:
     - depguard
+    - gochecknoglobals # Immutable globals are fine
   presets:
     - bugs
     - comment
@@ -16,7 +17,7 @@ linters:
     - module
     - performance
     - sql
-    # - style
+    - style
     # - test
     - unused
 
