disable exhaustruct linting
Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,7 @@ linters:
   disable:
     - depguard
     - gochecknoglobals # Immutable globals are fine
+    - exhaustruct # Often the case for protobuf generated code or gorm structs
   presets:
     - bugs
     - comment
