--- a/.github/workflows/test-package-build.yml
+++ b/.github/workflows/test-package-build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build UI
         working-directory: mlflow/server/js
         run: |
-          yarn --no-check-resolutions
+          yarn --no-immutable --no-check-resolutions
           yarn build
 
       - name: Check dependencies consistency
