Add initial K6 script
Signed-off-by: nojaf <florian.verdonck@outlook.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
       "version": "1.22",
       "golangciLintVersion": "1.59.0"
     },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/dhoeric/features/k6:1": {}
   },
   "customizations": {
     "vscode": {
