Patch langchain async APIs for autologging (#12114)
Signed-off-by: Serena Ruan <serena.rxy@gmail.com>
Signed-off-by: Daniel Lok <daniel.lok@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -679,6 +679,7 @@ langchain:
           "numexpr",
           "spacy",
           "langchain-core!=0.1.39", # https://github.com/langchain-ai/langchain/issues/19947
+          "pytest-asyncio", # for testing runnable async functions patches
         ]
     run: |
       # For MlflowCallback text analysis
